Minor correction to use URL